# airflow-monitoring

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint  Dockerfile  LICENSE  README.md  docker-compose.yml  k8s_cronjob.yaml  pyproject.toml  template.env
.github/workflows/: docker-publish.yml
airflow_monitoring/: airflow_api.py  http_session.py  logs.py  main.py  saver.py  settings.py
airflow_monitoring/db/: connection.py  models.py  queries.py
test/: test_saver.py
