[tool.poetry]
name = "airflow_monitoring"
version = "0.1.0"
description = ""
authors = ["Jonas Petrovsky <jonas.petrovsky@direct.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13.0"
requests = "^2.32.3"
structlog = "^23.3.0"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
request-session = "^0.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["airflow_monitoring"]
